--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,44 @@
+@-webkit-keyframes tracking-in-expand-fwd-top {
+    0% {
+        letter-spacing: -0.5em;
+        -webkit-transform: translateZ(-700px) translateY(-500px);
+        transform: translateZ(-700px) translateY(-500px);
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        -webkit-transform: translateZ(0) translateY(0);
+        transform: translateZ(0) translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes tracking-in-expand-fwd-top {
+    0% {
+        letter-spacing: -0.5em;
+        -webkit-transform: translateZ(-700px) translateY(-500px);
+        transform: translateZ(-700px) translateY(-500px);
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        -webkit-transform: translateZ(0) translateY(0);
+        transform: translateZ(0) translateY(0);
+        opacity: 1;
+    }
+}
+
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -91,6 +132,11 @@ ol {
     line-height: normal;
 }
 
+.menu-item:hover {
+    color: #44944bb1;
+    font-size: 21px;
+}
+
 .menu__user-button {
     color: #44944A;
     font-family: Montserrat;
@@ -133,4 +179,92 @@ ol {
     font-weight: 900;
     line-height: 40px;
     letter-spacing: 5px;
+}
+
+.infonews-section {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin-top: 10px;
+    justify-content: center;
+    margin-bottom: 300px;
+}
+
+.infonews-section__button-link {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    cursor: pointer;
+}
+
+.button-container {
+    position: absolute;
+    display: flex;
+    width: 714px;
+    height: 5px;
+    border-top: 3px solid #44944A;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.button-container__text {
+    flex-shrink: 0;
+    color: #44944A;
+    font-family: Montserrat;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 41px;
+    margin: 0;
+}
+
+.news-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .5s;
+    -webkit-animation: tracking-in-expand-fwd-top 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    animation: tracking-in-expand-fwd-top 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+.news-container.active {
+    max-height: 1000px;
+}
+
+
+.news-1 {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.news-size {
+    max-width: 70vw;
+}
+
+.news-1__img {}
+
+.news-image {
+    max-width: 600px;
+    max-height: 300px;
+}
+
+.news-1__text {
+    display: flex;
+    align-items: center;
+    color: #44944A;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.news-text-size {
+    max-width: 50%;
 }
