--- a/style/style.css
+++ b/style/style.css
@@ -1,41 +1,3 @@
-@-webkit-keyframes tracking-in-expand-fwd-top {
-    0% {
-        letter-spacing: -0.5em;
-        -webkit-transform: translateZ(-700px) translateY(-500px);
-        transform: translateZ(-700px) translateY(-500px);
-        opacity: 0;
-    }
-
-    40% {
-        opacity: 0.6;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0) translateY(0);
-        transform: translateZ(0) translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes tracking-in-expand-fwd-top {
-    0% {
-        letter-spacing: -0.5em;
-        -webkit-transform: translateZ(-700px) translateY(-500px);
-        transform: translateZ(-700px) translateY(-500px);
-        opacity: 0;
-    }
-
-    40% {
-        opacity: 0.6;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0) translateY(0);
-        transform: translateZ(0) translateY(0);
-        opacity: 1;
-    }
-}
-
 .center {
     display: flex;
     justify-content: center;
@@ -43,7 +5,9 @@
     height: 100%;
 }
 
-
+html {
+    scroll-behavior: smooth;
+}
 
 * {
     margin: 0;
@@ -83,9 +47,8 @@ ol {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin: 0;
 }
-
-/* .input-container {} */
 
 .input-container {
     position: relative;
@@ -126,7 +89,10 @@ ol {
     flex-direction: row;
     gap: 20px;
     align-items: center;
+    max-width: 330px;
+    max-height: 70px;
     margin: 0;
+    padding: 0;
 }
 
 .menu-item {
@@ -147,17 +113,24 @@ ol {
 .menu__user-button {
     color: #44944A;
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 22px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
-    border: 2px solid #44944A;
+    border: 3px solid #44944A;
+    border-radius: 2px;
     background: rgba(217, 217, 217, 0.00);
-    padding: 0 10px;
+    padding: 3px 40px;
     cursor: pointer;
+    transition: background-color .5s ease-out;
 }
 
-.carousel-item{
+.menu__user-button:hover {
+    background-color: #44944A;
+    color: #ffffff;
+}
+
+.carousel-item {
     position: relative;
 }
 
@@ -192,7 +165,7 @@ ol {
     height: auto;
     margin-top: 10px;
     justify-content: center;
-    margin-bottom: 300px;
+    margin-bottom: 200px;
 }
 
 .infonews-section__button-link {
@@ -207,11 +180,16 @@ ol {
     display: flex;
     width: 714px;
     height: 5px;
-    border-top: 3px solid #44944A;
     justify-content: center;
+    border-top: #44944A 5px solid;
     flex-direction: row;
     justify-content: center;
     padding-top: 10px;
+    transition: all .5s;
+}
+
+.button-container:hover {
+    border-top: #3c8442 5px solid;
 }
 
 .button-container__text {
@@ -225,53 +203,72 @@ ol {
     margin: 0;
 }
 
+#content-box {
+    max-height: 0;
+    overflow: hidden;
+    transition: all 1s ease-out;
+    padding: 0;
+    background-color: #f9f9f9;
+}
+
+#content-box.active {
+    max-height: 100vh;
+    padding: 10px;
+    transition: all 1s ease-out;
+
+}
+
 .news-container {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
     align-items: center;
     overflow: hidden;
     max-height: 0;
-    transition: max-height .5s;
-    -webkit-animation: tracking-in-expand-fwd-top 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-    animation: tracking-in-expand-fwd-top 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-}
-
-.news-container.active {
-    max-height: 1000px;
-}
-
-
-.news-1 {
-    display: flex;
-    flex-direction: row;
+    transition: all 3s ease-out;
     gap: 50px;
 }
 
-.news-size {
-    max-width: 70vw;
-}
-
-.news-1__img {}
-
 .news-image {
-    max-width: 600px;
-    max-height: 300px;
+    max-width: 30vw;
+    max-height: 20vh;
 }
 
-.news-1__text {
+.news-container.active {
+    max-height: 100vh;
+    transition: all 3s ease-out;
+}
+
+
+.news-content {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.news-content h2 {
     color: #44944A;
-    font-family: Montserrat;
-    font-size: 20px;
+    font-family: "Montserrat Alternates";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.25px;
+}
+
+.news-content p {
+    color: #333333;
+    font-family: "Montserrat Alternates";
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-}
-
-.news-text-size {
-    max-width: 50%;
+    letter-spacing: 1.25px;
+    max-width: 40vw;
 }
 
 .category-section {
@@ -280,28 +277,161 @@ ol {
     align-items: center;
 }
 
-#content-box {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height .5s ease-out, padding .5s ease-out;
+
+/* Категории - библиотека */
+
+.category-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.category-section__title {
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    width: 588.119px;
+    height: 96.063px;
+    flex-shrink: 0;
+    margin-bottom: 50px;
+}
+
+.category-section__left-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 325px;
+    height: 96px;
+    flex-shrink: 0;
+    border-radius: 40px;
+    background: #44944A;
+    z-index: 2;
+}
+
+.category-section__left-container__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    color: #FFF;
+    font-family: "Montserrat Alternates";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.25px;
+    width: 313.913px;
+    height: 45.649px;
+    flex-shrink: 0;
+    margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
 }
 
-#content-box.active {
-    max-height: 100vh;
-    padding: 20px;
+.category-section__right-container {
+    position: absolute;
+    right: 660px;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 40px;
+    background: #ECE0B5;
+    width: 325px;
+    height: 96px;
+    flex-shrink: 0;
+    z-index: 1;
 }
 
-.button-container {
+.category-section__right-container__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 230.119px;
+    height: 50.532px;
+    flex-shrink: 0;
+    color: #44944A;
+    font-family: "Montserrat Alternates";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.25px;
+}
+
+.category-section__category-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(2, 50%);
+    gap: 20px;
+    flex-shrink: 0;
+}
+
+.category-cards__card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    background: url(/img/card-image-1.png) 0px 0px no-repeat;
+    background-size: cover;
+    width: 255.100px;
+    height: 255.185px;
+    border-radius: 20px;
+    flex-shrink: 0;
+}
+
+.category-cards__card::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 30px;
+}
+
+.category-cards__card__title {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    z-index: 2;
+}
+
+.category-cards__card__button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+    background-color: #F2F2F2;
+    width: 159.794px;
+    height: 30.321px;
+    flex-shrink: 0;
+    border-radius: 15px;
+    padding-left: 15px;
     cursor: pointer;
-    background-color: #44944A;
-    color: white;
-    text-align: center;
-    padding: 2px 5px;
-    border-radius: 5px;
+    z-index: 2;
 }
 
-.button-container:hover {
-    background-color: #367537;
+.category-cards__card__button-link {
+    color: #44944A;
+    font-family: Montserrat;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0;
+    z-index: 2;
 }
